[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/skills/dark/dark_helix/dark_helix.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Spawn_cd" type="Timer" parent="."]

[node name="Spawn_node" type="Position2D" parent="."]

[node name="Live_time" type="Timer" parent="."]
wait_time = 15.0

[connection signal="timeout" from="Spawn_cd" to="." method="_on_spawn_cd_timeout"]
[connection signal="timeout" from="Live_time" to="." method="_on_Live_time_timeout"]
